# soccer-bets

./: README.md  main.py  pyproject.toml  scrapy.cfg
soccer_bets/: items.py  middlewares.py  pipelines.py  settings.py
soccer_bets/spiders/: __init__.py  football_data.py
